--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: "2"
 
 services:
   wordpress_dev:
-    image: "jamesc/wordpressdev-php7.3:latest"
-    container_name: "wordpressdev-php7.3-webdev"
+    image: "jamesc/wordpressdev-php7.4:latest"
+    container_name: "wordpressdev-php7.4-webdev"
     ports:
       - "8100:80"
     environment:
       VIRTUAL_HOST: "wordpress.dev"
       WORDPRESS_SITE_TITLE: "wordpressdev"
       WORDPRESS_SITE_URL: "http://wordpress.dev"
-      WORDPRESS_DB_HOST: "wordpressdev-php7.3-mysqldev"
+      WORDPRESS_DB_HOST: "wordpressdev-php7.4-mysqldev"
       WORDPRESS_DB_USER: "root"
       WORDPRESS_DB_PASSWORD: ""
       WORDPRESS_DB_NAME: "wordpress"
@@ -20,11 +20,11 @@ services:
       - "front"
       - "back"
     volumes:
-      - "./wp:/var/www/html/"
+      - "./wordpressdev:/var/www/html/"
 
   mysql_wordpressdev:
     image: "mysql:5.7"
-    container_name: "wordpressdev-php7.3-mysqldev"
+    container_name: "wordpressdev-php7.4-mysqldev"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_DATABASE: "wordpress"
